Update PX Solution
Started code clean up (initialization, naming, namespaces, and spacing)

Updated debug [B-1]ssert

Updated color_t (init constructor && moved to types)

Updated login in manager

--- a/Solutions/Paladin Extensions/PX Framework/PX Framework.vcxproj
+++ b/Solutions/Paladin Extensions/PX Framework/PX Framework.vcxproj
@@ -180,6 +180,7 @@
     <ClCompile Include="Application\File Manager.cpp" />
     <ClCompile Include="Application\Input Manager.cpp" />
     <ClCompile Include="Application\Tools.cpp" />
+    <ClCompile Include="Application\Types.cpp" />
     <ClCompile Include="Drawing\Render Engine.cpp" />
     <ClCompile Include="Drawing\User Interface.cpp" />
     <ClCompile Include="Security\Connectivity.cpp" />
