Update PX Solution
Inclusion now pushes all warnings to 0 from headers so that no warnings come from those headers.

Uses new format for dependencies location

Fixed release warning

No longer ignores default libraries (symbol issues)

--- a/Solutions/Paladin Extensions/PX Manager/PX Manager.vcxproj
+++ b/Solutions/Paladin Extensions/PX Manager/PX Manager.vcxproj
@@ -132,6 +132,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
+      <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
