--- a/Solutions/Paladin Extensions/PX Dummy/PX Dummy.vcxproj.filters
+++ b/Solutions/Paladin Extensions/PX Dummy/PX Dummy.vcxproj.filters
@@ -15,13 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="PX Middleman.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="PX Middleman.hpp">
+    <ClInclude Include="PX Dummy.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="PX Dummy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
