--- a/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
+++ b/Solutions/Paladin Extensions/PX CSGO/PX CSGO.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{DE0F53AB-6B29-4C0D-BD91-024D6493EBDB}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>PXCSGO</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -156,7 +156,9 @@
     <ClCompile Include="Application\Hooks.cpp" />
     <ClCompile Include="Application\Information.cpp" />
     <ClCompile Include="Design\User Interface.cpp" />
+    <ClCompile Include="Features\Awareness\Extra Sensory Drawing.cpp" />
     <ClCompile Include="Features\Awareness\Glow.cpp" />
+    <ClCompile Include="Features\Features.cpp" />
     <ClCompile Include="PX CSGO.cpp" />
     <ClCompile Include="SDK\Tools.cpp" />
     <ClCompile Include="SDK\Valve\Math\Vector2D.cpp" />
@@ -172,8 +174,11 @@
     <ClInclude Include="Application\Hooks.hpp" />
     <ClInclude Include="Application\Information.hpp" />
     <ClInclude Include="Design\User Interface.hpp" />
+    <ClInclude Include="Features\Awareness\Extra Sensory Drawing.hpp" />
     <ClInclude Include="Features\Awareness\Glow.hpp" />
+    <ClInclude Include="Features\Features.hpp" />
     <ClInclude Include="PX CSGO.hpp" />
+    <ClInclude Include="SDK\Definitions.hpp" />
     <ClInclude Include="SDK\SDK.hpp" />
     <ClInclude Include="SDK\Tools.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\CClientState.hpp" />
@@ -187,9 +192,11 @@
     <ClInclude Include="SDK\Valve\Interfaces\IClientThinkable.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IClientUnknown.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\ICollideable.hpp" />
+    <ClInclude Include="SDK\Valve\Interfaces\IEngineTrace.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\Interfaces.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\ISurface.hpp" />
     <ClInclude Include="SDK\Valve\Interfaces\IVEngineClient.hpp" />
+    <ClInclude Include="SDK\Valve\Interfaces\IVModelInfoClient.hpp" />
     <ClInclude Include="SDK\Valve\Math\Math.hpp" />
     <ClInclude Include="SDK\Valve\Math\QAngle.hpp" />
     <ClInclude Include="SDK\Valve\Math\Vector.hpp" />
@@ -208,6 +215,7 @@
     <ClInclude Include="SDK\Valve\Types\IHandleEntity.hpp" />
     <ClInclude Include="SDK\Valve\Types\platform.hpp" />
     <ClInclude Include="SDK\Valve\Types\Recv.hpp" />
+    <ClInclude Include="SDK\Valve\Types\Studio.hpp" />
     <ClInclude Include="SDK\Valve\Types\Types.hpp" />
     <ClInclude Include="SDK\Valve\Types\UtlBuffer.hpp" />
     <ClInclude Include="SDK\Valve\Types\UtlMemory.hpp" />
