--- a/Solutions/Paladin Extensions/PX Launcher/PX Launcher.vcxproj
+++ b/Solutions/Paladin Extensions/PX Launcher/PX Launcher.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{76D36F99-F94B-4A10-94B8-3A17120388BC}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>PXDummy</RootNamespace>
+    <RootNamespace>PXLauncher</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -149,10 +149,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="PX Dummy.hpp" />
+    <ClInclude Include="PX Launcher.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="PX Dummy.cpp" />
+    <ClCompile Include="PX Launcher.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PX Framework\PX Framework.vcxproj">
